--- a/src/components/Header/css/index.css
+++ b/src/components/Header/css/index.css
@@ -2,61 +2,41 @@
   width: 1440px;
   margin: 0 auto;
 }
-
 .header > .wrapper {
   position: fixed;
   z-index: 99;
   top: 0;
   width: 1440px;
   height: 66px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 0 56px;
 }
-
 .header > .wrapper > .header-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .header > .wrapper > .header-wrapper > img {
   margin-right: 50px;
   width: 122px;
   cursor: pointer;
 }
-
 .header > .wrapper > .header-wrapper > .header-menu {
   gap: 32px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   color: #949494;
 }
-
 .header > .wrapper > .header-wrapper > .header-menu > li {
   cursor: pointer;
   font-weight: 700;
   font-size: 14px;
 }
-
 .header > .wrapper > .header-wrapper > .header-menu > li:hover {
-  -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
   opacity: 0.7;
 }
 
 .black {
   background-color: black;
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
