--- a/src/page/MainPage/css/index.css
+++ b/src/page/MainPage/css/index.css
@@ -2,63 +2,50 @@
   background-color: black;
   height: 5788px;
 }
-
 #root .main-page .wrapper {
   width: 1146px;
   margin: 0 auto;
 }
-
 #root .main-page .section1 {
   height: 776px;
   position: relative;
   width: 1440px;
   margin: 0 auto;
 }
-
 #root .main-page .section1 > .section1-title {
   top: 0;
   left: 50%;
-  -webkit-transform: translate(-50%, 0%);
-          transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
   position: absolute;
   text-align: center;
   padding-top: 211px;
 }
-
 #root .main-page .section1 > .section1-title > .title {
   font-weight: 700;
   font-size: 32px;
   line-height: 130%;
 }
-
 #root .main-page .section1 > .section1-title > .title > span {
   background: linear-gradient(127.07deg, #03ffbe 14.31%, #1c48ff 85.68%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 #root .main-page .section1 > .section1-title > .sub {
   margin-top: 8px;
   font-weight: 400;
   font-size: 24px;
 }
-
 #root .main-page .section2 {
   height: 819px;
 }
-
 #root .main-page .section2 > .section2-wrapper {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-top: 165px;
 }
-
 #root .main-page .section2 > .section2-wrapper > .section2-title {
   width: 450px;
 }
-
 #root .main-page .section2 > .section2-wrapper > .section2-title > .title {
   margin-bottom: 12px;
   font-weight: 700;
@@ -68,20 +55,17 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 #root .main-page .section2 > .section2-wrapper > .section2-title > .sub {
   font-weight: 700;
   font-size: 32px;
   line-height: 140%;
   margin-bottom: 12px;
 }
-
 #root .main-page .section2 > .section2-wrapper > .section2-title > .text {
   font-weight: 400;
   font-size: 14px;
   line-height: 160%;
 }
-
 #root .main-page .section2 > .section2-wrapper > .section2-img > img {
   top: 218px;
   left: 653px;
@@ -89,12 +73,10 @@
   width: 350px;
   height: 479px;
 }
-
 #root .main-page .section2 > .section2-wrapper > .section2-img > .back-icon {
   margin-left: 223px;
   padding-top: 78px;
 }
-
 #root .main-page .section3 {
   position: relative;
   height: 3038px;
@@ -103,23 +85,20 @@
   position: relative;
   padding-top: 158px;
 }
-
 #root .main-page .section3 > .section3-back {
   position: absolute;
   top: 0;
   width: 1440px;
-  background-image: url(/public/assets/Main/section3-back.png);
-  background-image: -webkit-image-set(url(/public/assets/Main/section3-back.png) 1x, url(/public/assets/Main/section3-back@2x.png) 2x, url(/public/assets/Main/section3-back@3x.png) 3x);
+  background-image: url(/public/assets/main/section3-back.png);
+  background-image: -webkit-image-set(url(/public/assets/main/section3-back.png) 1x, url(/public/assets/main/section3-back@2x.png) 2x, url(/public/assets/main/section3-back@3x.png) 3x);
   height: 776px;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 #root .main-page .section3 > .section3-wrapper {
   width: 1146px;
   margin: 0 auto;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-title {
   margin-bottom: 16px;
   width: 44px;
@@ -129,71 +108,56 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-title-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 15px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-title-wrapper > .left > .title {
   font-weight: 700;
   font-size: 32px;
   line-height: 150%;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-title-wrapper > .left > .sub {
   font-weight: 700;
   font-size: 18px;
   color: #949494;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-title-wrapper > .right {
   margin-top: 6px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-title-wrapper > .right > .title {
   font-weight: 400;
   font-size: 14px;
   line-height: 160%;
   margin-bottom: 11px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-title-wrapper > .right > .sub {
   font-weight: 400;
   font-size: 14px;
   line-height: 160%;
   color: #949494;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content {
   margin-bottom: 316px;
   margin-top: 87px;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (559px)[2];
-      grid-template-columns: repeat(2, 559px);
+  grid-template-columns: repeat(2, 559px);
   gap: 28px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content > .box {
   position: relative;
   width: 559px;
   height: 669px;
   background: #292929;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content > .box > .box-wrapper {
   padding: 45px 47px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content > .box > .box-wrapper > .title {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 18px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content > .box > .box-wrapper > .text {
   margin-bottom: 4px;
   width: 330px;
@@ -203,34 +167,29 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content > .box > .box-wrapper > .sub {
   margin-bottom: 16px;
   font-weight: 700;
   font-size: 20px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content > .box > .box-wrapper > .english {
   margin-bottom: 7px;
   font-weight: 400;
   font-size: 13px;
   line-height: 160%;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content > .box > .box-wrapper > .bottom {
   font-weight: 400;
   font-size: 14px;
   color: #949494;
   line-height: 160%;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3-content > .box > img {
   position: absolute;
   width: 559px;
   height: 322px;
   bottom: 0;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .title {
   margin-bottom: 16px;
   font-weight: 700;
@@ -240,37 +199,29 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .sub {
   font-size: 32px;
   line-height: 150%;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .text {
   color: #949494;
   font-weight: 700;
   font-size: 18px;
   margin-bottom: 39px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1147px)[1];
-      grid-template-columns: repeat(1, 1147px);
+  grid-template-columns: repeat(1, 1147px);
   gap: 24px;
   position: relative;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content > .box {
   z-index: 10;
-  background: -webkit-gradient(linear, left top, right top, color-stop(39.33%, #292929), color-stop(88.85%, rgba(41, 41, 41, 0)));
   background: linear-gradient(90deg, #292929 39.33%, rgba(41, 41, 41, 0) 88.85%);
   padding: 44px 47px;
   width: 1147px;
   height: 337px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content > .box > .box-wrapper > .title {
   width: 125px;
   font-size: 18px;
@@ -279,26 +230,22 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content > .box > .box-wrapper > .text {
   font-size: 28px;
   margin-bottom: 16px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content > .box > .box-wrapper > .english {
   font-size: 14px;
   line-height: 160%;
   font-weight: 400;
   margin-bottom: 4px;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content > .box > .box-wrapper > .bottom {
   font-weight: 400;
   font-size: 14px;
   color: #949494;
   line-height: 160%;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content > .img-1 {
   top: 1px;
   right: 0;
@@ -306,7 +253,6 @@
   height: 335px;
   position: absolute;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content > .img-2 {
   top: 361px;
   right: 0;
@@ -314,7 +260,6 @@
   height: 335px;
   position: absolute;
 }
-
 #root .main-page .section3 > .section3-wrapper > .section3_2 > .section3-content > .img-3 {
   top: 722px;
   right: 0;
@@ -322,124 +267,98 @@
   height: 335px;
   position: absolute;
 }
-
 #root .main-page .section4 {
   width: 1440px;
   margin: 0 auto;
-  background-image: url(/public/assets/Main/section4-back.png);
-  background-image: -webkit-image-set(url(/public/assets/Main/section4-back.png) 1x, url(/public/assets/Main/section4-back@2x.png) 2x, url(/public/assets/Main/section4-back@3x.png) 3x);
+  background-image: url(/public/assets/main/section4-back.png);
+  background-image: -webkit-image-set(url(/public/assets/main/section4-back.png) 1x, url(/public/assets/main/section4-back@2x.png) 2x, url(/public/assets/main/section4-back@3x.png) 3x);
   height: 535px;
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 #root .main-page .section4 > .section4-wrapper {
   padding-top: 138px;
   text-align: center;
 }
-
 #root .main-page .section4 > .section4-wrapper > .title {
   margin-bottom: 8px;
   font-weight: 700;
   font-size: 32px;
   line-height: 150%;
 }
-
 #root .main-page .section4 > .section4-wrapper > .sub {
   margin-bottom: 24px;
   font-weight: 700;
   font-size: 24px;
   line-height: 150%;
 }
-
 #root .main-page .section4 > .section4-wrapper > .english {
   margin-bottom: 8px;
   font-weight: 400;
   font-size: 14px;
   line-height: 160%;
 }
-
 #root .main-page .section4 > .section4-wrapper > .text {
   font-weight: 400;
   font-size: 14px;
   line-height: 160%;
 }
-
 #root .main-page .section5 {
   position: relative;
   width: 1470px;
   margin: 0 auto;
   height: 619px;
 }
-
 #root .main-page .section5 > .section5-wrapper {
   width: 1146px;
   margin: 0 auto;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-back {
   position: absolute;
   width: 1157px;
   margin: 0 auto;
   right: 0;
-  background-image: url(/public/assets/Main/section5-back.png);
-  background-image: -webkit-image-set(url(/public/assets/Main/section5-back.png) 1x, url(/public/assets/Main/section5-back@2x.png) 2x, url(/public/assets/Main/section5-back@3x.png) 3x);
+  background-image: url(/public/assets/main/section5-back.png);
+  background-image: -webkit-image-set(url(/public/assets/main/section5-back.png) 1x, url(/public/assets/main/section5-back@2x.png) 2x, url(/public/assets/main/section5-back@3x.png) 3x);
   height: 619px;
   background-repeat: no-repeat;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-title {
   padding-top: 200px;
   position: absolute;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-title > .title {
   font-weight: 700;
   font-size: 40px;
   margin-bottom: 12px;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-title > .sub {
   font-weight: 700;
   font-size: 24px;
   margin-bottom: 24px;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-title > .mail-box {
   padding: 0px 25px 0px 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   width: 471px;
   height: 54px;
   background-color: #292929;
   border-radius: 10px;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-title > .mail-box > .mail {
   margin-right: 147px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-title > .mail-box > .mail > img {
   margin-right: 7px;
   width: 32px;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-title > .mail-box > .mail > .text {
   font-weight: 700;
   font-size: 16px;
 }
-
 #root .main-page .section5 > .section5-wrapper > .section5-title > .mail-box > .email {
   font-size: 18px;
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
